--- a/CleaningData.ipynb
+++ b/CleaningData.ipynb
@@ -3270,11 +3270,11 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "id": "qvjKmGUc8Vu2",
-        "outputId": "c8170bc7-a32c-4227-c60a-fbaec1158669",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qvjKmGUc8Vu2",
+        "outputId": "c8170bc7-a32c-4227-c60a-fbaec1158669"
       },
       "outputs": [
         {
@@ -4033,11 +4033,11 @@
       "execution_count": 53,
       "metadata": {
         "id": "nRc505FlD8Kb",
-        "outputId": "8448ddff-1adc-4d12-ee78-365e82286478",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 356
-        }
+        },
+        "outputId": "8448ddff-1adc-4d12-ee78-365e82286478"
       },
       "outputs": [
         {
@@ -4133,11 +4133,11 @@
         "get_non_numeric_characters(df1[\"Split Ratio\"].apply( lambda x: str(x)))"
       ],
       "metadata": {
-        "id": "kPmU0S5kCbt0",
-        "outputId": "324454b2-2604-433b-fe6a-f2bfc7df7ba0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kPmU0S5kCbt0",
+        "outputId": "324454b2-2604-433b-fe6a-f2bfc7df7ba0"
       },
       "execution_count": 51,
       "outputs": [
@@ -4157,14 +4157,14 @@
         "df1"
       ],
       "metadata": {
-        "id": "hoU1LkGADPH_",
-        "outputId": "d242b016-a1fd-47dd-a39f-73ea89415a76",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 942
-        }
+          "height": 546
+        },
+        "id": "hoU1LkGADPH_",
+        "outputId": "3a3439ea-0827-4980-b1da-7f0d5fc79fe9"
       },
-      "execution_count": 66,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4188,19 +4188,19 @@
               "1         843.78     7346935699     2.85         3:2  \n",
               "2        $336,19  8,027,589,419     2.28         2:1  \n",
               "3        $952.63        1939.5M     4.51         3:2  \n",
-              "4        1493.44     8984007687     1.93         NaN  \n",
+              "4        1493.44     8984007687     1.93         nan  \n",
               "...          ...            ...      ...         ...  \n",
               "199995   $893.89       4184.54M     4,71         3:2  \n",
               "199996    659.42  5,782,458,138     1.04         3:2  \n",
-              "199997    904.11     3104296586    $3.21         NaN  \n",
-              "199998   1201.64       45454067     1.51         NaN  \n",
-              "199999    583.93      149011263     3.44         NaN  \n",
+              "199997    904.11     3104296586    $3.21         nan  \n",
+              "199998   1201.64       45454067     1.51         nan  \n",
+              "199999    583.93      149011263     3.44         nan  \n",
               "\n",
               "[200000 rows x 11 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-872435a1-e14a-4914-b269-3d409bd1d39f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b0c7ae56-c52c-4b57-802c-6ff9883d6e70\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -4301,7 +4301,7 @@
               "      <td>1493.44</td>\n",
               "      <td>8984007687</td>\n",
               "      <td>1.93</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>nan</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -4357,7 +4357,7 @@
               "      <td>904.11</td>\n",
               "      <td>3104296586</td>\n",
               "      <td>$3.21</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>nan</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>199998</th>\n",
@@ -4371,7 +4371,7 @@
               "      <td>1201.64</td>\n",
               "      <td>45454067</td>\n",
               "      <td>1.51</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>nan</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>199999</th>\n",
@@ -4385,7 +4385,7 @@
               "      <td>583.93</td>\n",
               "      <td>149011263</td>\n",
               "      <td>3.44</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>nan</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -4394,7 +4394,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-872435a1-e14a-4914-b269-3d409bd1d39f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b0c7ae56-c52c-4b57-802c-6ff9883d6e70')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -4446,12 +4446,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-872435a1-e14a-4914-b269-3d409bd1d39f button.colab-df-convert');\n",
+              "        document.querySelector('#df-b0c7ae56-c52c-4b57-802c-6ff9883d6e70 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-872435a1-e14a-4914-b269-3d409bd1d39f');\n",
+              "        const element = document.querySelector('#df-b0c7ae56-c52c-4b57-802c-6ff9883d6e70');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -4471,8 +4471,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-0218a476-dc07-4ab9-a813-207b84235e54\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0218a476-dc07-4ab9-a813-207b84235e54')\"\n",
+              "    <div id=\"df-0ec7fb50-fdd3-4750-b53e-40467b2cae5c\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0ec7fb50-fdd3-4750-b53e-40467b2cae5c')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -4591,14 +4591,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-0218a476-dc07-4ab9-a813-207b84235e54 button');\n",
+              "            document.querySelector('#df-0ec7fb50-fdd3-4750-b53e-40467b2cae5c button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_f5e18e08-a84b-4465-8160-58d4f2d37ec4\">\n",
+              "  <div id=\"id_735f35f2-1378-4824-a73a-5ebe32b1982e\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -4642,7 +4642,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_f5e18e08-a84b-4465-8160-58d4f2d37ec4 button.colab-df-generate');\n",
+              "        document.querySelector('#id_735f35f2-1378-4824-a73a-5ebe32b1982e button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -4662,7 +4662,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 108
         },
         {
           "output_type": "stream",
@@ -4690,11 +4690,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "kkBBzFcYJf-u",
-        "outputId": "54da34ff-3144-442d-b780-d3bd6af26a26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kkBBzFcYJf-u",
+        "outputId": "54da34ff-3144-442d-b780-d3bd6af26a26"
       },
       "execution_count": 74,
       "outputs": [
@@ -16154,29 +16154,55 @@
     {
       "cell_type": "code",
       "source": [
+        "def valid_split(valor):\n",
+        "  return valor[0].isdigit() and valor[1] != \":\" and valor[2].isdigit()\n",
+        "\n",
         "for i, valor in df1[\"Split Ratio\"].items():\n",
         "    valor = str(valor)\n",
         "    if len(valor_str) == 3:\n",
-        "        if valor[0].isdigit() and valor[1] != \":\" and valor[2].isdigit():\n",
+        "        if valid_split(valor):\n",
         "            print(valor)\n",
         "            df1.loc[i, \"Split Ratio\"] = valor[0] + \":\" + valor[2]\n",
         "            print(df1.loc[i, \"Split Ratio\"])\n"
       ],
       "metadata": {
-        "id": "vNVwWI7mZRSW",
-        "outputId": "f7aac21f-599e-4ae0-a511-1c0cb59d6d37",
+        "id": "vNVwWI7mZRSW"
+      },
+      "execution_count": 101,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def right_split(val):\n",
+        "    val = str(val)\n",
+        "    return len(val) == 3 and val[0].isdigit() and val[1] == \":\" and val[2].isdigit()\n",
+        "\n",
+        "poss = []\n",
+        "\n",
+        "for _, val in df1[\"Split Ratio\"].items():\n",
+        "    if pd.isna(val):\n",
+        "        continue\n",
+        "\n",
+        "    if right_split(val) and val not in poss:\n",
+        "        poss.append(val)\n",
+        "\n",
+        "print(\"Split Ratios válidos encontrados:\", poss)\n"
+      ],
+      "metadata": {
+        "id": "ZbxlkEFNsbov",
+        "outputId": "f2a7b14c-9473-4ccd-c5fe-0d4490a6071c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 78,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4\n",
-            "NoEe\n"
+            "Split Ratios válidos encontrados: ['1:1', '3:2', '2:1']\n"
           ]
         }
       ]
@@ -16184,34 +16210,15 @@
     {
       "cell_type": "code",
       "source": [
-        "df1[\"Split Ratio\"] = df1[\"Split Ratio\"].apply(lambda x: str(x))\n",
-        "def get_digits(column):\n",
-        "  print(column.name)\n",
-        "  tot = set(\"\")\n",
-        "  for index, value in column.items():\n",
-        "    tot = tot | set([c for c in value if c.isdigit()])\n",
-        "  print(tot)\n",
-        "\n",
-        "get_digits(df1[\"Split Ratio\"])"
+        "ajust_parcial_splits(val):\n",
+        "  if not val[0].isdigit:\n",
+        ""
       ],
       "metadata": {
-        "id": "LkONWRtBbVKQ",
-        "outputId": "b0c4f25e-6f2c-4839-f0ca-4bf4bc327df9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "GwYRxxRmyPpp"
       },
-      "execution_count": 80,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Split Ratio\n",
-            "{'2', '1', '3'}\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
