--- a/CleaningData.ipynb
+++ b/CleaningData.ipynb
@@ -4159,7 +4159,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 546
+          "height": 395
         },
         "id": "hoU1LkGADPH_",
         "outputId": "3a3439ea-0827-4980-b1da-7f0d5fc79fe9"
@@ -16190,11 +16190,11 @@
         "print(\"Split Ratios válidos encontrados:\", poss)\n"
       ],
       "metadata": {
-        "id": "ZbxlkEFNsbov",
-        "outputId": "f2a7b14c-9473-4ccd-c5fe-0d4490a6071c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZbxlkEFNsbov",
+        "outputId": "f2a7b14c-9473-4ccd-c5fe-0d4490a6071c"
       },
       "execution_count": 107,
       "outputs": [
@@ -16219,6 +16219,41 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = 0\n",
+        "d = 0\n",
+        "tot = 0\n",
+        "for i, v in df1[\"Split Ratio\"].items():\n",
+        "  tot += 1\n",
+        "  if right_split(v) and v[2]== \"1\":\n",
+        "    if v[0] == \"1\":\n",
+        "      c+=1\n",
+        "    elif v[0] == \"2\":\n",
+        "      d+=1\n",
+        "print(c/tot)\n",
+        "print(d/tot)"
+      ],
+      "metadata": {
+        "id": "X64II6js0H7b",
+        "outputId": "0fb17013-dc81-47d6-c88c-307a6152bb2f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.240595\n",
+            "0.2426\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
